--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#bio">Short Bio</a></li>
-                <li><a href="#info">Basic Info</a></li>
+                <li><a href="#bio">Bio</a></li>
+                <li><a href="#info">Info</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
